fixing responsiveness
Fixed the responsiveness of the projects section on smaller screens where the contact section got overlapped

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -3,9 +3,15 @@
     height: 83vh;
     margin-bottom: 6rem;
   }
-  .about-container {
-    flex-wrap: wrap;
+
+  #projects{
+    height:min-content;
   }
+
+  .about-container {
+    flex-wrap:wrap;
+  }
+
 }
 
 @media screen and (max-width: 1200px) {
